--- a/app/src/main/res/layout/fragment_infor.xml
+++ b/app/src/main/res/layout/fragment_infor.xml
@@ -11,42 +11,31 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="140dp"
+        android:layout_height="110dp"
         android:background="@drawable/banner"
-        android:orientation="horizontal">
-
-        <ImageButton
-            android:id="@+id/imageButton"
-            android:layout_width="35dp"
-            android:layout_height="35dp"
-            android:background="@android:drawable/presence_online"
-            android:src="@android:drawable/ic_menu_camera"
-            android:translationX="365dp"
-            android:translationY="100dp" />
-    </LinearLayout>
-
-    <TextView
-        android:id="@+id/textView6"
-        android:layout_width="match_parent"
-        android:layout_height="2dp"
-        android:background="#005A52" />
+        android:orientation="horizontal" />
 
     <TextView
         android:id="@+id/textView5"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="간단한 모임 소개부분~~~~~~~~"
-        android:textAppearance="@style/TextAppearance.AppCompat.Large" />
+        android:layout_height="70dp"
+        android:gravity="center_vertical"
+        android:text="[CRD 독서모임 제5차 리더 모집]\n매주 월, 수 5시에 모입니다."
+        android:textAllCaps="false"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large"
+        android:textSize="14sp"
+        android:textStyle="normal" />
 
     <TextView
         android:id="@+id/textView4"
         android:layout_width="match_parent"
-        android:layout_height="2dp"
-        android:background="#005A52" />
+        android:layout_height="3dp"
+        android:background="@color/back" />
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="30dp"
+        android:gravity="center_vertical"
         android:orientation="horizontal"
         android:padding="2dp">
 
@@ -62,8 +51,20 @@
             android:id="@+id/textView3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="필독" />
+            android:text="필독"
+            android:textSize="16sp" />
+
     </LinearLayout>
+
+    <include
+        layout="@layout/list_notice"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
+    <include
+        layout="@layout/list_notice"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 
     <include
         layout="@layout/list_notice"
@@ -78,9 +79,15 @@
     <TextView
         android:id="@+id/textView2"
         android:layout_width="match_parent"
-        android:layout_height="2dp"
-        android:background="#FCD8AB"
+        android:layout_height="3dp"
+        android:background="@color/back"
         android:text="TextView" />
+
+
+    <include
+        layout="@layout/list_schedule"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 
     <include
         layout="@layout/list_schedule"
