--- a/app/src/main/res/layout/list_schedule.xml
+++ b/app/src/main/res/layout/list_schedule.xml
@@ -3,12 +3,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:gravity="center">
+    android:gravity="center"
+    android:padding="2dp">
 
     <ImageView
-        android:id="@+id/imageView3"
-        android:layout_width="72dp"
-        android:layout_height="72dp"
+        android:id="@+id/imageView6"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
         app:srcCompat="@drawable/icon_calendar" />
 
     <LinearLayout
@@ -75,5 +76,6 @@
                 android:layout_weight="1"
                 android:text="회비입니다아아아" />
         </LinearLayout>
+
     </LinearLayout>
 </LinearLayout>
