--- a/app/src/main/res/layout/notice_input.xml
+++ b/app/src/main/res/layout/notice_input.xml
@@ -58,54 +58,39 @@
 
     <android.support.v7.widget.GridLayout
         android:layout_width="match_parent"
-        android:layout_height="80dp"
+        android:layout_height="wrap_content"
         app:columnCount="5"
         app:rowCount="1">
+
+        <ImageView
+            android:id="@+id/imageView3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:srcCompat="@mipmap/ic_launcher" />
 
         <ImageView
             android:id="@+id/imageView7"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginRight="7dp"
-            app:layout_gravity="center"
             app:srcCompat="@mipmap/ic_launcher" />
 
         <ImageView
             android:id="@+id/imageView8"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginRight="7dp"
-            app:layout_gravity="center"
             app:srcCompat="@mipmap/ic_launcher" />
 
         <ImageView
-            android:id="@+id/imageView10"
+            android:id="@+id/imageView9"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginRight="7dp"
-            app:layout_column="2"
-            app:layout_gravity="center"
-            app:layout_row="0"
             app:srcCompat="@mipmap/ic_launcher" />
 
-        <ImageView
-            android:id="@+id/imageView11"
+        <Button
+            android:id="@+id/button"
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_marginRight="7dp"
-            android:foregroundGravity="center"
-            app:layout_gravity="center"
-            app:srcCompat="@mipmap/ic_launcher" />
-
-        <ImageButton
-            android:id="@+id/imageButton2"
-            android:layout_width="90dp"
-            android:layout_height="match_parent"
-            android:background="@android:color/transparent"
-            android:foregroundGravity="center"
-            app:layout_gravity="center"
-            app:srcCompat="@drawable/icon_plus2" />
-
+            android:layout_height="wrap_content"
+            android:text="Button" />
     </android.support.v7.widget.GridLayout>
 
     <LinearLayout
@@ -116,21 +101,22 @@
         android:padding="5dp">
 
         <Button
-            android:id="@+id/button"
+            android:id="@+id/bntBack"
             android:layout_width="70dp"
             android:layout_height="40dp"
             android:layout_marginRight="5dp"
+            android:background="@color/back"
+            android:text="돌아가기" />
+
+        <Button
+            android:id="@+id/bntWrite"
+            android:layout_width="70dp"
+            android:layout_height="40dp"
+            android:layout_marginLeft="5dp"
             android:background="@color/colorPrimaryDark"
             android:gravity="center"
             android:text="등록하기" />
 
-        <Button
-            android:id="@+id/button2"
-            android:layout_width="70dp"
-            android:layout_height="40dp"
-            android:layout_marginLeft="5dp"
-            android:background="@color/dd"
-            android:text="돌아가기" />
     </LinearLayout>
 
 </LinearLayout>
